cleaning up console log and fixing word wrap issue

--- a/src/Components/Messages/Message/Message.css
+++ b/src/Components/Messages/Message/Message.css
@@ -5,7 +5,7 @@
 
 .message-box {
 	position: relative;
-	max-width: 40%;
+	max-width: 45%;
 	margin-bottom: 5px;
 	min-width: 100px;
 }
@@ -52,6 +52,7 @@
 	animation-name: expand-bounce;
 	animation-duration: .3s;
 	animation-timing-function: ease-in-out;
+	word-break: break-word;
 }
 
 .message-text:hover {
